# MSD_Project

./: .gitignore  CMakeLists.txt  README.md
app/: main.py
device_firmware/: CMakeLists.txt  main.cpp  tusb_config.h  usb_descriptors.c
final_app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
firmware/: main.cpp
mock_app/: main.py
